...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar hidden="YES" contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="stI-Bh-4hL">
                                <rect key="frame" x="0.0" y="0.0" width="768" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="search-bar"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="DCW-OT-zwC"/>
                                </connections>
                            </searchBar>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g1Q-9P-ZTP">
...
                                            <outlet property="countryNameLabel" destination="GRO-uH-G7o" id="wWN-SI-ism"/>
                                            <outlet property="flagView" destination="SVu-OU-F7L" id="o3n-dX-awL"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Countries Table"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="dataSource" destination="60x-h9-M7T" id="SWH-2O-9Vo"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Tb7-yN-mdL"/>
                                </connections>
                            </tableView>
...
