...
    @IBOutlet var searchController:UISearchController! = UISearchController(searchResultsController: nil)
    override init(){
        super.init()
        self.searchController.searchResultsUpdater = self
        self.searchController.hidesNavigationBarDuringPresentation = false
        self.searchController.dimsBackgroundDuringPresentation = true
        self.searchController.searchBar.placeholder = "Search Countries"
        self.searchController.searchBar.sizeToFit()
    }
    
    
    
    func searchCountriesWithKeyWord(key:String,completion:@escaping ()->Void){
...
